--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
       <button id="speak">Speak</button>
 
     </div>
-
+<script type="text/javascript" src="./script.js">
 <script>
   const msg = new SpeechSynthesisUtterance();
   let voices = [];
